# web-search-api-evals

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: browsecomp_full_dataset.csv  deepsearchqa_full_dataset.csv  frames_full_dataset.csv
src/evals/: constants.py  eval_results_analyzer.py  eval_runner.py  utils.py
src/evals/configs/: datasets.py  samplers.py
src/evals/processing/: deepsearchqa_utils.py  evaluate_answer.py  llm.py  synthesize_answer.py  synthesizer_utils.py  utils.py
src/evals/samplers/applied_samplers/: exa_sampler.py  google_sampler.py  parallel_sampler.py  tavily_sampler.py  you_search_sampler.py
src/evals/samplers/base_samplers/: base_api_sampler.py  base_sampler.py  base_sdk_sampler.py
tests/: test_simpleqa.py
