[project]
name = "web-search-api-evals"
version = "0.0.1"
authors = [
  { name="Eddy Nassif" },
  { name="Zairah Mustahsan" },
]
description = "A repository for running evaluations"
readme = "README.md"
requires-python = ">=3.10,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/youdotcom-oss/web-search-api-evals.git"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
